--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,38 @@
+PyMuPDF>=1.24.4
+python-docx
+pymongo
+python-dotenv
+fastapi
+uvicorn[standard]==0.24.0
+passlib[bcrypt]
+datasets>=2.21.0
+accelerate      # helps with training speed
+scikit-learn
+evaluate
+# Core Data Science Libraries
+pandas>=2.2.0
+numpy>=1.26.4
+scikit-learn>=1.4.0
+
+# Model Training
+xgboost>=2.1.0
+imbalanced-learn>=0.12.0
+
+# Explainability (XAI)
+shap>=0.45.1
+
+# Visualization
+matplotlib>=3.8.2
+seaborn>=0.13.0
+plotly>=5.18.0
+
+# Dashboard
+streamlit>=1.29.0
+
+# Utilities
+joblib>=1.3.2
+python-multipart==0.0.6
+
 # Core Data Science Libraries
 pandas==2.1.4
 numpy==1.26.2
