--- a/requirements.txt
+++ b/requirements.txt
@@ -55,3 +55,7 @@ streamlit==1.29.0
 
 # Utilities
 joblib==1.3.2
+
+aiofiles==23.2.1                    # Async file operations
+reportlab==4.0.7
+Pillow==10.1.0
